--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -385,15 +385,16 @@ and $\lie{D}^p(2,1,\alpha=1)=\lie{osp}(4-p,p|2)$.
 
 Every compact connected Lie group~$K$ is a quotient of $\Lie{U}(1)^n\times\prod_{i=1}^m K_i$ by a finite subgroup of its center, where~$K_i$ are simple, compact, simply-connected, connected Lie groups.
 
-\paragraph{Homotopy.} A connected Lie group deformation-retracts onto (hence is homotopic to) its maximal compact subgroup~$K$.
+\paragraph{Homotopy.} Any connected Lie group is homeomorphic to its maximal compact subgroup~$K$ times a Euclidean space~$\RR^p$.
 All $\pi_{j\geq 1}(K)$ are abelian and finitely generated, $\pi_2(K)=0$, $\pi_3(K)=\ZZ^m$ where $m$~counts simple factors in a finite cover $\Lie{U}(1)^n\times\prod_{i=1}^m K_i\twoheadrightarrow K$, and $\pi_j(K)=\prod_{i=1}^m\pi_j(K_i)$ for $j\geq 2$.
 
-For any~$G$ there exists $\prod_{i=1}^{\rank G} S^{2k_i+1}\to G$ which induces isomorphisms of rational (\ie, torsion-free part of) homotopy/\allowbreak cohomology groups.  For compact simple~$K$, these spheres are
+
+For any~$G$ there exists $\prod_{i=1}^{\rank G} S^{2k_i-1}\to G$ which induces isomorphisms of rational (\ie, torsion-free part of) homotopy/\allowbreak cohomology groups where $k_i$~are the degrees of fundamental invariants.  For compact simple~$K$,
 \begin{center}
 \vspace{-1.3\baselineskip}
 \begin{minipage}[t]{.5\linewidth}%
 \begin{tab}{@{}>{$}l<{$}@{ }>{$}l<{$}@{}}
-  \text{Group} & (2k_i+1) \\\midrule
+  \text{Group} & (2k_i-1) \\\midrule
   \Lie{A}_n & 3,5,\ldots,2n+1\\
   \Lie{B}_n,\Lie{C}_n & 3,7,\ldots,4n-1\\
   \Lie{D}_n & 3,7,\ldots,4n-5,2n-1\\
@@ -401,10 +402,10 @@ For any~$G$ there exists $\prod_{i=1}^{\rank G} S^{2k_i+1}\to G$ which induces i
 \end{minipage}%
 \begin{minipage}[t]{.5\linewidth}
 \begin{tab}{@{}>{$}l<{$}@{ }>{$}l<{$}@{}}
-  \Lie{E}_6 & 3,9,11,??,??,??\\
-  \Lie{E}_7 & 3,11,??,??,??,??,??\\
-  \Lie{E}_8 & 3,??,??,??,??,??,??,??\\
-  \Lie{F}_4 & 3,11,??,??\\
+  \Lie{E}_6 & 3,9,11,15,17,23\\
+  \Lie{E}_7 & 3,11,15,19,23,27,35\\
+  \Lie{E}_8 & 3,15,23,27,35,39,47,59\\
+  \Lie{F}_4 & 3,11,15,23\\
   \Lie{G}_2 & 3,11\\
 \end{tab}
 \end{minipage}
@@ -414,9 +415,8 @@ $\pi_{j\geq 2}(G)$ has a factor~$\ZZ$ for each~$S^j$ above, and some torsion.
 Explicitly, $\pi_j(\Lie{SU}(n))$ is $\ZZ$~for odd~$j<2n$, $0$~for even~$j<2n$, and is pure torsion for $j\geq 2n$.
 Similarly, for $j<4n+2$, $\pi_j(\Lie{USp}(2n))$ is $\ZZ$~for $j\equiv 3,7\bmod{8}$, $\ZZ_2$~for $j\equiv 4,5\bmod{8}$, and $0$~otherwise.
 
-% http://felix.physics.sunysb.edu/~abanov/Teaching/Spring2009/Notes/abanov-cpA1-upload.pdf
-
-% todo: find the product of sphere to which each compact exceptional group is rational homotopic.
+% http://www.maths.ed.ac.uk/~aar/surgery/uicc/mimura.pdf claims the table is the "well-known Hopf theorem"
+% See Abanov's http://felix.physics.sunysb.edu/~abanov/Teaching/Spring2009/Notes/abanov-cpA1-upload.pdf
 
 % todo: say somewhere $SU(2)$ is $S^3$.
 
@@ -904,13 +904,14 @@ In this table ``type~IIA'' \etc{} refer to string theories not supergravities
   M-theory on $\Lie{G}_2$-manifolds\footnote{Apply K3 duality fiber-wise.} & heterotic or type~I on CY$_3$\\
   M-theory on K3\footnote{Apparently there is also a similar F-theory/heterotic duality.} & type~IIA on $T^3/\cyclic{2}$\\
 \end{tab}
+% todo: footnotes are lost!
 
 \section{Misc}
 
 \subsection{Physics of gauge theories}
 
-\paragraph{Phases characterized by potential} $V(R)$ between quarks (up to a constant):
-Coulomb phase $1/R$,
+\paragraph{Phases characterized by potential} $V(R)$ (up to a constant) between quarks at distance~$R$:
+Coulomb $1/R$,
 free electric $1/\bigl(R\log(R\Lambda)\bigr)$,
 free magnetic $\log(R\Lambda)/R$,
 Higgs (constant),
@@ -920,7 +921,7 @@ confining $\sigma R$.
 
 \paragraph{Basic properties.} $\pi_0(X,x)$ is the set of connected components.  $\pi_1(X,x)$ is the fundamental group.  For $k\geq 1$, $\pi_k(X,x)$ only depends on the connected component of~$x$.  $\pi_k(X\times Y,(x,y))=\pi_k(X,x)\times\pi_k(Y,y)$.
 
-\paragraph{Quotient.}  If $\pi_0(X)=\pi_1(X)=0$ and $G\actson X$ then $\pi_1(X/G)=\pi_0(G)$ ($=G$ for $G$~discrete).
+\paragraph{Quotient.}  If $G$~acts on connected simply-connected~$X$ then $\pi_1(X/G)=\pi_0(G)$ ($=G$ for $G$~discrete).
 
 \paragraph{Long exact sequence for a fiber bundle} $F\hookrightarrow E\twoheadrightarrow B$: for base-points $b_0\in B$ and $e_0=f_0\in F=p^{-1}(b_0)\subset E$, $\cdots\to\pi_{i+1}(B)\to\pi_i(F)\to\pi_i(E)\to\pi_i(B)\to\cdots\to\pi_0(E)$ is exact, namely each image equals the next kernel (inverse image of the constant map).
 
@@ -935,7 +936,8 @@ confining $\sigma R$.
   S^5 & 0 & 0 & 0 & 0 & \ZZ & \ZZ_2 & \ZZ_2 & \ZZ_{24} \\
 \end{tab}
 % data of the table found on Wikipedia page
-
+$\pi_1(\RR\PP^n)=\ZZ_2$ for $n\geq 2$ and $\pi_k(\RR\PP^n)=\pi_k(S^n)$ for $k\geq 2$.
+$\pi_1(\CC\PP^n)=0$, $\pi_2(\CC\PP^n)=\ZZ$, $\pi_k(\CC\PP^n)=\pi_k(S^{2n+1})$ for $k\geq 3$.
 
 \paragraph{Topological groups have abelian \(\pi\sb 1(G)\).}
 % http://mathoverflow.net/questions/35868/fundamental-group-of-lie-groups
