Rename degrees of fundamental invariants d_i

--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -389,12 +389,12 @@ Every compact connected Lie group~$K$ is a quotient of $\Lie{U}(1)^n\times\prod_
 All $\pi_{j\geq 1}(K)$ are abelian and finitely generated, $\pi_2(K)=0$, $\pi_3(K)=\ZZ^m$ where $m$~counts simple factors in a finite cover $\Lie{U}(1)^n\times\prod_{i=1}^m K_i\twoheadrightarrow K$, and $\pi_j(K)=\prod_{i=1}^m\pi_j(K_i)$ for $j\geq 2$.
 
 
-For any~$G$ there exists $\prod_{i=1}^{\rank G} S^{2k_i-1}\to G$ which induces isomorphisms of rational (\ie, torsion-free part of) homotopy/\allowbreak cohomology groups where $k_i$~are the degrees of fundamental invariants.  For compact simple~$K$,
+For any~$G$ there exists $\prod_{i=1}^{\rank G} S^{2d_i-1}\to G$ which induces isomorphisms of rational (\ie, torsion-free part of) homotopy/\allowbreak cohomology groups where $d_i$~are the degrees of fundamental invariants.  For compact simple~$K$,
 \begin{center}
 \vspace{-1.3\baselineskip}
 \begin{minipage}[t]{.5\linewidth}%
 \begin{tab}{@{}>{$}l<{$}@{ }>{$}l<{$}@{}}
-  \text{Group} & (2k_i-1) \\\midrule
+  \text{Group} & (2d_i-1) \\\midrule
   \Lie{A}_n & 3,5,\ldots,2n+1\\
   \Lie{B}_n,\Lie{C}_n & 3,7,\ldots,4n-1\\
   \Lie{D}_n & 3,7,\ldots,4n-5,2n-1\\
