--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -107,7 +107,7 @@
 
 %\newcommand{\defined}[1]{\textsl{#1}}
 \newcommand{\actson}{\mathrel{\reflectbox{$\righttoleftarrow$}}}
-\newcommand{\dd}[2][]{\mathop{\mathrm{d}\mkern0mu\relax#1#2}}%\mkern avoids \mathop{d} (vertical placement issue)
+\newcommand{\dd}[2][]{\mathop{\mathrm{d}\mkern0mu\relax#1#2}\nolimits}%\mkern avoids \mathop{d} (vertical placement issue)
 \newcommand{\ie}{i.e.\@}
 \newcommand{\eg}{e.g.\@}
 \newcommand{\Eg}{E.g.\@}
@@ -613,6 +613,18 @@ $\Nsusy=2$ $\to$ 2d $\Nsusy=(2,2)$.
 
 \paragraph{Pure supersymmetric Yang--Mills (SYM)} classically has $\Lie{U}(1)_R$ symmetry, broken by instantons to $\ZZ_{2h}$ with $h=C_2(\text{adj})$.  It confines, is mass-gapped, and has $C_2(A)$ vacua associated to breaking $\ZZ_{2h}$ to $\ZZ_2$ by gaugino condensation $\langle\lambda\lambda\rangle$.  Witten index $\Tr(-1)^F=h$.
 
+\paragraph{4d $\Nsusy=2$:}
+
+% todo: Hitchin system
+
+The theory on $\RR^4_{\epsilon_1,0}$ (Nekrasov--Shatashvili limit) $\leftrightarrow$ quantum integrable system with Planck constant~$\epsilon_1$.
+
+Coulomb moduli $\leftrightarrow$ action variables.
+
+Supersymmetric vacua $\leftrightarrow$ eigenstates.
+
+Lift to $\RR^4\times S^1$ gives $K$-theoretic Nekrasov partition function.  The 5d theory $\leftrightarrow$ relativistic version of the integrable system.
+
 \paragraph{3d $\Nsusy=4$:} complex reductive group~$G$ and
 finite-dimensional symplectic representation~$\repr{M}$ of~$G$.
 %% according to Kodera-Nakajima 1608.00875
@@ -625,7 +637,7 @@ finite-dimensional symplectic representation~$\repr{M}$ of~$G$.
 
 \paragraph{Unitary minimal model} $\mathcal{M}_{k+2,k+1}$ is coset $\frac{\hat{\lie{su}}(2)_{k-1}\times\hat{\lie{su}}(2)_1}{\hat{\lie{su}}(2)_k}$
 
-\subsection{Other theories}
+\subsection{Supergravity and strings}
 
 \paragraph{Pure supergravities} in $4\leq d\leq 11$.  Gravity is topological in $d=3$.  The maximum number of supercharges $Q=32$ forbids $d>11$.  A priori, all $Q=4k$ are possible.  Focus on $32, 16, 8, 4$.
 \begin{tab}{lcccc}
@@ -643,6 +655,21 @@ $(1,0)$ &\\
 4 &$N=8$ &$N=4$ & $N=2$
 &$N=1$\\
 \end{tab}
+
+\paragraph{M-theory} has as its low-energy limit 11d supergravity, which has two $\frac{1}{2}$-BPS membrane solutions (with $16$~Killing spinors):
+M2-brane $\dd{s}^2=\Lambda^4\dd{x}^2+\frac{\dd{y}^2}{\Lambda^2}$ with $\Lambda=(1+\frac{c_2N_2l^6}{\abs{y}^6})^{-1/6}$, and
+M5-brane $\dd{s}^2=\Lambda\dd{x}^2+\dd{y}^2/\Lambda^2$ with $\Lambda=(1+\frac{c_5N_5l^3}{\abs{y}^3})^{-1/3}$,
+where $x\in\RR^{p,1}$ and $y\in\RR^{10-p}$.  In the near horizon $y\to 0$ these become $\textrm{AdS}_4\times S^7$ and $\textrm{AdS}_7\times S^4$ with $32$~Killing spinors.
+
+\subsection{Integrable models}
+
+% todo: classical Toda chain
+
+% todo: quantum Toda chain
+
+\paragraph{Relativistic quantum Toda chain.} $H = \sum_{n=1}^N \bigl(\cos(2\eta\hat{p}_n)+g^2\cos(\eta\hat{p}_n+\eta\hat{p}_{n+1})e^{x_{n+1}-x_n}\bigr)$.  Its non-relativistic limit is $\eta\to 0$ imaginary with $g/(i\eta\sqrt{2})=c$ fixed.
+% http://arxiv.org/abs/1609.07385 ``Exact solution of the relativistic quantum Toda chain''
+
 
 \section{Manifolds}
 
