Switch to using pdfoutput=1 to enforce pdflatex use

--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -1,3 +1,4 @@
+\pdfoutput=1
 \documentclass[10pt,letterpaper]{article}
 %\usepackage{savetrees}
 \usepackage[margin=1.2cm]{geometry}
@@ -1099,7 +1100,3 @@ orbifold singularities of K3~surfaces.
 % todo: real-quaternionic indicator
 % todo: https://en.wikipedia.org/wiki/Frobenius%E2%80%93Schur_indicator
 \end{document}
-
-% Local Variables:
-% TeX-PDF-mode: t
-% End:
